--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 A web application using jQueryto pull 
                                 random pics from Nasa's APOD API.
                             </p>
-                            <a href="../JStollman.github.io/nasa" class="card-link">Demo</a>
+                            <a href="nasa" class="card-link">Demo</a>
                             <a href="https://github.com/JStollman/nasa" 
                             class="card-link">Code</a>
                         </div>
