working with git modules

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <h6 class="card-subtitle text-muted">
                             jQuery, HTML, CSS, JavaScript</h6>
                             <p class="card-text">
-                                A web application using jQueryto pull 
+                                A web application using jQuery to pull 
                                 random pics from Nasa's APOD API.
                             </p>
                             <a href="nasa" class="card-link">Demo</a>
@@ -55,10 +55,30 @@
                         </div>
                     </div>
                 </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5>Flight Tracker</h5>
+                            <h6 class="card-subtitle text-muted">
+                                PHP, HTML, CSS</h6>
+                                <p class="card-text">
+                                    A web application primarily using PHP and  
+                                    REST API's to pull data from other websites
+                                    and present it in my own way.
+                                </p>
+                                <a href="flighttracker" class="card-link">Demo</a>
+                                <a href="https://github.com/JStollman/flighttracker" 
+                                class="card-link">Code</a>
+                            </div>
+                        </div>
+                    </div>
                 <div class="col">&nbsp;</div>
                 <div class="col">&nbsp;</div>
             </div>
-        </main>
+
+
+
+            </main>
             
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
