--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                     REST API's to pull data from other websites
                                     and present it in my own way.
                                 </p>
-                                <a href="flighttracker" class="card-link">Demo</a>
+                                <a href="https://jasonstollman.com/flighttracker/" class="card-link">Demo</a>
                                 <a href="https://github.com/JStollman/flighttracker" 
                                 class="card-link">Code</a>
                             </div>
